BZR-56 refactored whole project to KTOR